@@ -54,3 +54,6 @@ Note that the following bug and feature requests are logged in GForge with relat
  
  * [#713] additional query and data generation methods for tickets
  ** added method to check if a ticket is in use
+ 
+ * [#723] add ireg support in jargon 
+ ** added methods to unregister a collection
